css/less.modules/_layout.less
*, *:before, *:after { box-sizing: @box-sizing; }
.box-container {
  clear: both;
  overflow: @overflow;
  padding: 0.5rem;
}
.box {
  display: inline-block !important;
  vertical-align: @valign-boxes !important;
  margin-right: -4px !important;
  margin-bottom: 2px;
  margin-left: 1px;
  .box {
    margin-bottom: 1rem;
    &.no-margin { margin-bottom: -2px; }
  }
}
.no-margin { 
  margin-top: 0;
  margin-bottom: 0;
}
.span1 {
  width: 100%;
}
.span1-2 {
  width: @width50;
  @media @medium { width: 100%; }
}
.span1-3 {
  width: @width33;
  @media @medium { width: 100%; }
}
.span2-3 {
  width: @width66;
  @media @medium { 
    width: 100%; 
  }
}
.span1-4 {
  width: @width25;
  @media @medium { width: @width50; }
  /* set full-width to the last box, if number of elements is odd (offset is used) */
  &.last-box:nth-child(odd) {
    @media @medium { width: 100%; } 
  }
}
.span3-4 {
  width: @width75;
  @media @medium { width: 100%; }
}
.span1-5 {
  width: @width20;
  @media @medium { width: 100%; }
}
.span2-5 {
  width: @width40;
  @media @medium { width: 100%; }
}
.span3-5 {
  width: @width60;
  @media @medium { width: 100%; }
}
.span4-5 {
  width: @width80;
  @media @medium { width: 100%; }
}

/* set all boxes to full-width if screen is really small */
.box[class*="span"] {
	@media @small {
		width: 100% !important;
		margin-right: -6px !important;
	}
	@media @medium { margin-right: -6px !important; }
}

/* reset offsets on small screens also */
.box[class*="offset"] {
  @media @small { margin-left: 0 !important; }
  @media @medium { margin-left: 0 !important; }
}

/* custom margins */
.box.margin-small {
	margin-right: @small-margin - 0.33 !important;
}
.box.margin-medium {
	margin-right: @medium-margin - 0.33 !important;
}
.box.margin-large {
	margin-right: @large-margin - 0.33 !important;
}
@media @computer {
.span1.margin-small { width: @width100 - @small-margin; }
.span1.margin-medium { width: @width100 - @medium-margin; }
.span1.margin-large { width: @width100 - @large-margin; }
.span1-2.margin-small { width: @width50 - @small-margin; }
.span1-2.margin-medium { width: @width50 - @medium-margin; }
.span1-2.margin-large { width: @width50 - @large-margin; }
.span1-3.margin-small { width: @width33 - @small-margin; }
.span1-3.margin-medium { width: @width33 - @medium-margin; }
.span1-3.margin-large { width: @width33 - @large-margin; }
.span2-3.margin-small { width: @width66 - @small-margin; }
.span2-3.margin-medium { width: @width66 - @medium-margin; }
.span2-3.margin-large { width: @width66 - @large-margin; }
.span1-4.margin-small { width: @width25 - @small-margin; }
.span1-4.margin-medium { width: @width25 - @medium-margin; }
.span1-4.margin-large { width: @width25 - @large-margin; }
.span3-4.margin-small { width: @width75 - @small-margin; }
.span3-4.margin-medium { width: @width75 - @medium-margin; }
.span3-4.margin-large { width: @width75 - @large-margin; }
.span1-5.margin-small { width: @width20 - @small-margin; }
.span1-5.margin-medium { width: @width20 - @medium-margin; }
.span1-5.margin-large { width: @width20 - @large-margin; }
.span2-5.margin-small { width: @width40 - @small-margin; }
.span2-5.margin-medium { width: @width40 - @medium-margin; }
.span2-5.margin-large { width: @width40 - @large-margin; }
.span3-5.margin-small { width: @width60 - @small-margin; }
.span3-5.margin-medium { width: @width60 - @medium-margin; }
.span3-5.margin-large { width: @width60 - @large-margin; }
.span4-5.margin-small { width: @width80 - @small-margin; }
.span4-5.margin-medium { width: @width80 - @medium-margin; }
.span4-5.margin-large { width: @width80 - @large-margin; }
}
/* offsets */
.offset1-2 { margin-left: @width50; }
.offset1-3 { margin-left: @width33; }
.offset1-4 { margin-left: @width25; }
.offset3-4 { margin-left: @width75; }
.offset1-5 { margin-left: @width20; }
.offset2-5 { margin-left: @width40; }
.offset3-5 { margin-left: @width60; }
.offset4-5 { margin-left: @width80; }

